# consomalin

./: .gitignore  README.md  commands.yml  compiler.yml  docker-compose.yml
attendance/: attendance.js
breadthw/: breadthw.cabal
buildreleaserun/: build.sh  cron.sh  logs.sh  run_oneoff_cmd.sh
buildreleaserun/lib/: get_labels.py
byte-diver/: drive.cabal  stack.yaml
byte-diver/kiva/: Main.hs
byte-diver/src/Drive/: Product.hs  Server.hs  Utils.hs
ci/: build.sh  compiler.yml  haskell.sh  kiva.sh  service.sh  tag.sh  theremine.sh
ci/hooks/: post-receive.sh
ci/old/: service.sh  theremine.sh
docker/: .gitignore  commands.yml  docker-compose.yml
docker-compose/docker-compose/: services_dev.yml  services_master.yml  tools.yml
docker-compose/templates/: dev.yml  master.yml
docker/metronome-cache/conf/: nginx.conf
docker/nginx/: nginx.conf
drive/attendance/: attendance.js
drive/ci/: build.sh
drive/curl/: add2basket.sh  cancel.sh  connect.sh  cookies.txt  emptyBasket.sh  get_basket.sh  get_day.sh  go.sh  go_payment.sh  go_schedule.sh  home.sh  janitor.sh  notes.txt  register.sh  select_schedule.sh  validate_payment.sh
drive/docker/: commands.yml  compiler.yml  docker-compose.yml
drive/docker/nginx/: nginx.conf
drive/haskell/: drive.cabal
drive/janitor/src/: initUser.js
drive/recorder/src/: middlewares.js  srv.js
drive/theremine/: Dockerfile  index.html  package.json
drive/theremine/config/: index.js
drive/theremine/docker/: nginx.conf
drive/theremine/src/: main.js
gitit/: Dockerfile  ci.sh
go-agent/: Dockerfile  ci.sh
haskell/: .dockerignore  .gitignore  DESIGN.md  Dockerfile  README.md  drive.cabal  stack.yaml
haskell/byte-diver/: Dockerfile  Main.hs
haskell/compiler/: Dockerfile  compile.sh  docker-compose-srv.yml  docker-compose.yml  docker-compose2.yml
haskell/compiler/image/: compile.sh
haskell/kiva/: Dockerfile  Main.hs
haskell/metronome/: Dockerfile  Main.hs
haskell/resources/: familyNames.txt  firstNames.txt
haskell/resources/mails/: confirmation.hamlet
haskell/resources/userInfo/: cities.txt  firstNames.txt
haskell/services/byte-diver/: Main.hs
haskell/services/kiva/: Dockerfile  Main.hs  Server.hs
haskell/services/lyrist/: Dockerfile  Main.hs
haskell/services/metronome/: Dockerfile  Main.hs
haskell/services/wendy/: Dockerfile  Main.hs
haskell/src/Drive/: Attendance.hs  Basket.hs  ConsoBasket.hs  Crawl.hs  DriveBasket.hs  Mongo.hs  Price.hs  Product.hs  Rabbitmq.hs  Re.hs  Server.hs  Slot.hs  Transaction.hs  Types.hs  User.hs  Utils.hs  ViewProduct.hs
haskell/src/Drive/Bs/: Mongo.hs  Rabbitmq.hs
haskell/src/Drive/Crawl/: Account.hs  Auchan.hs
haskell/src/Drive/Crawl/Auchan/: Actions.hs  Category.hs  Home.hs  Merchandising.hs  Product.hs  Schedule.hs  ShopChoice.hs
haskell/src/Drive/Crawl/Auchan/Page/: Basket.hs  Category.hs  Home.hs  Landing.hs  Login.hs  Mail.hs  Merchandising.hs  Payment.hs  Register.hs  Schedule.hs
haskell/src/Drive/Mail/: Confirmation.hs  IMAP.hs  SMTP.hs  Smtp.hs
haskell/src/Drive/Transaction/: Status.hs
haskell/src/Utils/: Env.hs  Generic.hs  Misc.hs  Re.hs
haskell/test/: test.hs
haskell/wendy/: Dockerfile  Main.hs
janitor/: Dockerfile  package.json
janitor/src/: app.js  initUser.js  middlewares.js  srv.js  utils.js
janitor/src/bs/: history.js  kiva.js  metronome.js  rabbitMQ.js  wendy.js
janitor/src/controllers/: basket.js  baskets.js  groups.js  history.js  kiva.js  products.js  schedule.js  users.js  wishProducts.js  wishes.js  wishlist.js
janitor/src/managers/: basket.js  baskets.js  groups.js  products.js  transactions.js  users.js  wishes.js
janitor/src/passport/: init.js  login.js  register.js
letsencrypt/: ci.sh
letsencrypt/scripts/: create_all.sh
mongo-express/: Dockerfile  config.js
nginx/: Dockerfile  ci.sh  healthcheck  mkvhosts.sh
nginx/conf/: nginx.conf  vhost.template
nginx2/conf/: nginx.conf
openstack/: name.sh  new_worker.sh  openrc.sh  programmers.txt  rm_worker.sh
openstack/old/: new.sh
openstack/old/machines/: fedora.sh
recorder/: .eslintrc.yml  Dockerfile  package.json
recorder/src/: app.js  srv.js
recorder/src/controllers/: history.js
supervisor/nginx/: cache.conf  nginx.conf  registry.conf
supervisor/nginx/sites-enabled/: amqp  b  board  ci  consomalin.ovh  consomalin.shop  demo.consomalin.ovh  demo.consomalin.shop  dev  framapad  git  phpldapadmin  share  wiki
supervisor/release/docker-compose/: bs.yml  registry.yml  (+3 more)
supervisor/scripts/: build_release_run.sh  cron.sh  exec.sh  execit.sh  release.sh  run.sh
theremine/: .dockerignore  .eslintignore  .eslintrc.js  .eslintrc.yml  .gitignore  Dockerfile  README.md  app.js  db.js  index.html  mongoConfig.js  nodemon.js  package.json
theremine/config/: index.js
theremine/controllers/: confirmation.js  groups.js  index.js  products.js  section.js  users.js  wish.js  wishList.js  wishes.js  wishlist.js  withdraw.js
theremine/docker/: nginx.conf  run.sh
theremine/managers/: groupsManager.js  transactionsManager.js  usersManager.js  wishesManager.js
theremine/models/: User.js
theremine/passport/: init.js  login.js
theremine/src/: app.js  main.js  middlewares.js  replay.js  srv.js
theremine/views/: error.pug  index.pug  layout.pug
theremine2/: .eslintrc.js  index.html  package.json
theremine2/src/: main.js
web/: Dockerfile  app.js  db.js  mongoConfig.js  package.json
web/controllers/: users.js
web/passport/: register.js
web/views/: index.pug
webdriver-test/: README.md  webdriver-test.cabal
webdriver-test/src/: Main.hs
wiki/: Front Page.page  Haskell.page  competitors.page  drive_metrics.page  feedback.page  names.page
wiki.wiki/: Home.md
wiki/Haskell/: Testing.page  Tips.page
wiki/Schemas/: Schemappli (1).xml
wiki/backing_services/: mongo.page  rabbitmq.page
wiki/bugs/: not_in_prod.page
wiki/ops/: build_release_run.page  docker.page
wiki/services/: byte-diver.page  drive.page  janitor.page  kiva.page  metronome.page  recorder.page  replay.page  theremine.page  web.page  wendy.page
wiki/tests/: interface.page
(+255 files in other folders)
