name:                webdriver-test
version:             0.1.0.0
synopsis:            Simple PhantomJS webdriver example
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Laurent
maintainer:          example@example.com
copyright:           2017 Laurent
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable webdriver-test
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       process >= 1.4.2.0 && < 1.5,
                       protolude >= 0.1.6 && < 0.2,
                       webdriver >= 0.8.4 && < 0.9
  default-extensions:  OverloadedStrings, NoImplicitPrelude
